--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,5 @@
 {
 	"compilerOptions": {
-		"declaration": true,
-		"outDir": "dist",
-		"strict": true,
-		"target": "es2016"
+		"strict": true
 	}
 }
